--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,6 +10,6 @@
     {{ end }}
     </p>
     <p class="small">
-        Powered by <a href="http://www.gohugo.io/">Hugo</a> Theme By <a href="https://github.com/nodejh/hugo-theme-cactus-plus">nodejh</a>
+        Powered by <a href="http://www.gohugo.io/">Hugo</a> Theme By <a href="https://github.com/ghostsf/hugo-theme-xiao">ghostsf</a>
     </p>
 </footer>
