--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -12,6 +12,6 @@
 	{{ end }}
 
 	{{ if .Site.Params.enableRSS }}
-	<a class="cta" href="{{ .Site.RSSLink }}">{{ with .Site.Params.subscribe }}{{ . }}{{ else }}Subscribe{{ end }}</a>
+	<a class="" href="{{ .Site.RSSLink }}">{{ with .Site.Params.subscribe }}{{ . }}{{ else }}Rss{{ end }}</a>
 	{{ end }}
 </nav>
